updates to tspec mcmc

--- a/modeling/Light Curve Fit - HST Broadband and TESS.ipynb
+++ b/modeling/Light Curve Fit - HST Broadband and TESS.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,14 +449,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30000/30000 [01:33<00:00, 319.64it/s]\n"
+      " 32%|███▏      | 9463/30000 [00:27<00:58, 348.61it/s]Process ForkPoolWorker-14:\n",
+      "Process ForkPoolWorker-5:\n",
+      "Process ForkPoolWorker-7:\n",
+      "Process ForkPoolWorker-8:\n",
+      "Process ForkPoolWorker-13:\n",
+      "Process ForkPoolWorker-16:\n",
+      "Process ForkPoolWorker-6:\n",
+      "Process ForkPoolWorker-12:\n",
+      "Process ForkPoolWorker-4:\n",
+      "Process ForkPoolWorker-10:\n",
+      "Process ForkPoolWorker-15:\n",
+      "Process ForkPoolWorker-11:\n",
+      "Process ForkPoolWorker-2:\n",
+      "Process ForkPoolWorker-9:\n",
+      "Process ForkPoolWorker-3:\n",
+      "Process ForkPoolWorker-1:\n",
+      "Traceback (most recent call last):\n"
      ]
     }
    ],
