--- a/modeling/Light Curve Fit - HST Broadband and TESS and HARPS RV.ipynb
+++ b/modeling/Light Curve Fit - HST Broadband and TESS and HARPS RV.ipynb
@@ -78,7 +78,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'times_h' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 123>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    121\u001b[0m InitParams\u001b[38;5;241m.\u001b[39mlimb_dark \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquadratic\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    122\u001b[0m InitParams\u001b[38;5;241m.\u001b[39mu \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0.33\u001b[39m, \u001b[38;5;241m0.2\u001b[39m]\n\u001b[0;32m--> 123\u001b[0m BATMAN_HSTinitmodel \u001b[38;5;241m=\u001b[39m batman\u001b[38;5;241m.\u001b[39mTransitModel(InitParams, \u001b[43mtimes_h\u001b[49m)\n\u001b[1;32m    124\u001b[0m BATMAN_TESSinitmodel \u001b[38;5;241m=\u001b[39m batman\u001b[38;5;241m.\u001b[39mTransitModel(InitParams, times_t)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'times_h' is not defined"
+     ]
+    }
+   ],
    "source": [
     "##\n",
     "# Defining my parameter arrays (inits, priors, etc)\n",
@@ -518,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -859,17 +871,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best fit t_c\n",
-      "2458329.201974941\n",
-      "best fit P\n",
-      "6.034471683850292\n"
+      "best fit t_c\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'param_fits' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m## Printing out fit values that don't fully print in the table:\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbest fit t_c\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mparam_fits\u001b[49m[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbest fit P\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(P_fit)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'param_fits' is not defined"
      ]
     }
    ],
@@ -879,6 +899,66 @@
     "print(param_fits[0])\n",
     "print('best fit P')\n",
     "print(P_fit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2458329.201967736"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bb_paramfits[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.034471788906922"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10.**bb_paramfits[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.35550769729993"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10.**bb_paramfits[2]"
    ]
   },
   {
