transmission spectrum achieved

--- a/modeling/Light Curve Fit - HST Broadband and TESS and HARPS RV.ipynb
+++ b/modeling/Light Curve Fit - HST Broadband and TESS and HARPS RV.ipynb
@@ -151,7 +151,7 @@
     "##\n",
     "# Defining my parameter arrays (inits, priors, etc)\n",
     "\n",
-    "labels = np.asarray(['tc', 'log10P', 'log10a', 'cosi', 'RpRs_hst', 'amp1', 'amp2', 'tau1', 'tau2', 'RpRs_tess', 'slope', 'intcpt',\n",
+    "labels = np.asarray(['tc', 'log10P', 'log10a', 'cosi', 'RpRs_hst', 'amp1', 'amp2', 'tau1', 'tau2', 'slope', 'intcpt', 'RpRs_tess',\n",
     "                    'sqrtecosw', 'sqrtesinw', 'K', 'gamma'])\n",
     "### note, when RV data confirmed to work, change transit models to pull e and w from RV params rather than using fixed vals\n",
     "\n",
