remade spectra with new binnings

--- a/modeling/SED Fitting.ipynb
+++ b/modeling/SED Fitting.ipynb
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
       "| HST Rp [Rearth]  |  4.908538986001199  | 0.05249163267582713  |           4.71           |          0.17          |\n",
       "| TESS Rp [Rearth] |  4.862932915646416  | 0.06949016012759524  |           4.71           |          0.17          |\n",
       "|   Mp [Mearth]    | 17.586384966057857  |  1.0333912685806652  |           16.6           |          1.3           |\n",
-      "|    g [m/s^2]     |  7.145418196416143  |  7.145418196416143   |    7.327281505456395     |          0.0           |\n",
+      "|    g [m/s^2]     |  7.145418196416143  | 0.44199577265847756  |    7.327281505456395     |          0.0           |\n",
       "|     Teff [K]     |  5539.645894842202  |  63.10762588307034   |          5527.0          |          65.0          |\n",
       "|   Rstar [Rsol]   | 1.0594865830281115  | 0.008232127314753312 |           1.03           |          0.03          |\n",
       "|   Mstar [Msol]   | 1.0041620724089002  | 0.06318837990075726  |           0.92           |          0.03          |\n",
@@ -782,7 +782,7 @@
     "deriv_fits = np.asarray([fit_Rphst, fit_Rptess, fit_Mp, fit_g_hst,\n",
     "                         fit_Teff, fit_Rstar, fit_Mstar, fit_plx, fit_Av])\n",
     "\n",
-    "deriv_fiterrs = np.asarray([fit_Rphst_err, fit_Rptess_err, fit_Mp_err, fit_g_hst,\n",
+    "deriv_fiterrs = np.asarray([fit_Rphst_err, fit_Rptess_err, fit_Mp_err, fit_g_hst_err,\n",
     "                            fit_Teff_err, fit_Rstar_err, fit_Mstar_err, fit_plx_err, fit_Av_err])\n",
     "\n",
     "deriv_labels = np.asarray(['HST Rp [Rearth]', 'TESS Rp [Rearth]', 'Mp [Mearth]', 'g [m/s^2]',\n",
